// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtLoading should render default AtLoading 1`] = `
<view
  class="at-loading"
>
  <view
    class="at-loading__ring"
  />
  <view
    class="at-loading__ring"
  />
  <view
    class="at-loading__ring"
  />
</view>
`;

exports[`AtLoading should render prop -- color 1`] = `
<view
  class="at-loading"
>
  <view
    class="at-loading__ring"
    style="border: 1px solid #fff; border-color: #fff transparent transparent transparent;"
  />
  <view
    class="at-loading__ring"
    style="border: 1px solid #fff; border-color: #fff transparent transparent transparent;"
  />
  <view
    class="at-loading__ring"
    style="border: 1px solid #fff; border-color: #fff transparent transparent transparent;"
  />
</view>
`;

exports[`AtLoading should render prop -- size 1`] = `
<view
  class="at-loading"
  style="width: 0.32rem; height: 0.32rem;"
>
  <view
    class="at-loading__ring"
    style="width: 0.32rem; height: 0.32rem;"
  />
  <view
    class="at-loading__ring"
    style="width: 0.32rem; height: 0.32rem;"
  />
  <view
    class="at-loading__ring"
    style="width: 0.32rem; height: 0.32rem;"
  />
</view>
`;
